# blodwen

./: .gitignore  LICENSE  README.md
docs/: build  clean  exceptions.dot  fig1.dot  hardware.tex  intro.tex  main.tex  masterfirm.tex  pc.tex  pcregobsolete.tex  regs.tex  safety.tex  slavefirm.tex  svgs2pdfs
eagle/: rover board-4.brd  rover board-4.sch
firmware/: README.md
firmware/common/: build  fixed16.h  fixedptc.h  regDefinitions  regDefinitions.orig  regparse.hs  regs.h  regs.tex  regsauto.h  regsauto.ino  serialbuffer.h.obsolete  state.h
firmware/master/: ino.ini
firmware/master/src/: device.h  hwconfig.h  i2c.h  master.h  rc.h  rc.ino  rcRover.h  rcRover.ino  sketch.ino  temperature.h
firmware/master/test/src/: sketch.ino
firmware/orig/: Makefile  main.c  main.h
firmware/slave/: README  bdrive  blift  changeid  upload
firmware/slave/old/: serial.ino
firmware/slave/src/: adc.h  adc.ino  chassis.h  config.h  eeprom.ino  hwconfig.h  i2c_interface.ino  liftorsteer.h  motor.h  pid.h  posmotor.h  quadencoder.h  regs.h  regsauto.ino  sketch.ino  slave_i2c.h  slave_i2c.ino  speedmotor.h
firmware/temptests/getidnumber/: upload
firmware/temptests/getidnumber/lib/: OneWire
firmware/temptests/getidnumber/src/: sketch.ino
firmware/temptests/temps/: foo
firmware/temptests/temps/src/: sketch.ino
firmware/test/: old.ino
firmware/test/src/: rc.h  rc.ino  sketch.ino
pc/: CMakeLists.txt  README  blodwen.tgz  buildLibrary  comms.h  drive.h  drivemotorsim.h  hwconfig.h  motorsim.h  regconfig.h  regs.h  regsauto.cpp  regsauto.h  rover.cpp  roverexcept.h  sim.cpp  slave.h  status.h  steer.h
pc/blodwen/: README  lift.h  master.h  motor.h  motordata.h  rover.h  sim.h
pc/python/: CMakeLists.txt  blodwen.cpp
roverScript/: CMakeLists.txt  README  hormone.h  main.cpp  roverexceptions.h  script.ang  sdl.cpp  sdl.h  udpclient.cpp  udpclient.h  udpserver.cpp  udpserver.h  wordsCalib.cpp  wordsControl.cpp  wordsUDP.cpp  wordsUtil.cpp
